<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.layout_test.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/screen_home" />

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.example.layout_test.ui.videos.VideoFragment"
        android:label="@string/title_videos"
        tools:layout="@layout/screen_videos" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.layout_test.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/screen_calendar" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.layout_test.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/screen_community" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.layout_test.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/screen_mypage" />
</navigation>