<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/video_img_thumbnail"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/thumbnail_desc"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/video_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="#111"
            android:padding="4dp"
            android:text="@string/duration_example"
            android:textColor="#fff"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/video_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/video_menu_more"
        android:layout_toEndOf="@+id/video_img_thumbnail"
        android:text="@string/file_name_example"
        android:textColor="#000"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/video_menu_more"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/menu_more_desc"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_more_vert" />
</RelativeLayout>