<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onSubmit"
    tools:context=".ui.community.CommunityViewPostActivity">

    <TextView
        android:id="@+id/textPostTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ems="10"
        android:hint="글 제목"
        android:inputType="textLongMessage|textMultiLine|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPostTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPostBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:cursorVisible="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="게시글"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textPostCommentsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/community_comments"
                android:textAlignment="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textPostCommentsWrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/community_write_comment"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/textPostComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="댓글 내용...."
                android:inputType="textMultiLine"
                android:minLines="4"
                android:singleLine="false" />

            <Button
                android:id="@+id/btnPostCommentSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSubmit"
                android:text="@string/community_write_submit" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>